Generic Widget Page Template: Fix zone arrangements

--- a/FY19/Views/Shared/PageTemplates/KMJ_GenericWidgetPageView.cshtml
+++ b/FY19/Views/Shared/PageTemplates/KMJ_GenericWidgetPageView.cshtml
@@ -524,11 +524,9 @@
 
                         <div class="footer-btn">
                             <div class="footer-btn__wrapper">
-
                                 <div class="footer-btn-content">
                                     <p class="footer-btn-content__txt">
-                                        総合カタログ、サービス別カタログ（PDF）をダウンロード
-                                        することができます。
+                                        総合カタログ、サービス別カタログ（PDF）をダウンロードすることができます。
                                     </p>
 
                                     <p class="footer-btn-content__link"><a href="/business/service/it-guardians/catalog/index.html">カタログダウンロード</a></p>
@@ -536,15 +534,12 @@
 
                                 <div class="footer-btn-content">
                                     <p class="footer-btn-content__txt">
-                                        商品およびサービスについてご不明な点等ございましたら、
-                                        お気軽にお問い合わせください。
+                                        商品およびサービスについてご不明な点等ございましたら、お気軽にお問い合わせください。
                                     </p>
 
                                     <p class="footer-btn-content__link"><a href="https://bsoffers.konicaminolta.jp/fm-it-guardians-contact.html" target="_blank">お問い合わせ</a></p>
                                 </div>
-
                             </div>
-
                         </div>
 
                         <nav class="footer-navigation">
@@ -563,7 +558,6 @@
                         </nav>
 
                         <div class="to-top"><p><a href="#top"><span></span></a></p></div>
-
                     </div>
                 </div>
             </div>
@@ -612,11 +606,10 @@
                         <li><a href="https://www.konicaminolta.jp/about/csr/index.html">CSR（社会・環境活動）</a></li>
                     </ul>
                 </article>
-                <p class="copyright"><small>&copy;2011-2019 KONICA MINOLTA JAPAN, INC.</small></p>
+                <p class="copyright"><small>&copy;2011-2021 KONICA MINOLTA JAPAN, INC.</small></p>
                 @*<script type="text/javascript" charset="UTF-8" src="https://www.konicaminolta.jp/js/ext/sug.js#sv=//s.marsfinder.jp/konicaminolta__jp_business__jp_business&amp;input=search"></script>*@
 
                 <p id="page-top"><a href="#anchorPagetop"><img src="https://www.konicaminolta.jp/business/common/img/navi/pagetop.png" width="70" height="50" alt="このページのトップへ"></a></p>
-
             </footer>
         </div>
     </form>
