--- a/FY19/Views/Shared/PageTemplates/KMJ_ITG_MasterPageView.cshtml
+++ b/FY19/Views/Shared/PageTemplates/KMJ_ITG_MasterPageView.cshtml
@@ -40,7 +40,7 @@
     @*<script src="https://www.konicaminolta.jp/common/unchangeable/js/response-3.0.js"></script>*@
     <script src="https://www.konicaminolta.jp/component/c_common/js/jquery-1.7.1.min.js"></script>
     <meta property="og:image" content="https://www.konicaminolta.com/web-contents/kmj/assets/it-guardians/img/bg_keyvisual_sp.jpg?ext=.jpg" />
-    <link rel="stylesheet" href="~/Content/responsive.css">
+    <link rel="stylesheet" href="https://www.konicaminolta.com/web-contents/kmj/assets/it-guardians/css/responsive.css">
     <link rel="stylesheet" href="https://www.konicaminolta.com/web-contents/kmj/assets/it-guardians/css/it-guardians_top.css">
 
     <!--[if lt IE 9]>
@@ -467,7 +467,7 @@
 
             <div id="contentsArea" style="margin-top: 0px;">
                 <div id="contentsInner">
-                    <div id="main">
+                    <div class="main">
                         @*<cms:CMSWebPartZone ZoneID="HeaderZone" runat="server" />*@
                         @Html.Kentico().EditableArea("HeaderZone",
                                                     defaultSectionIdentifier: null,
@@ -501,70 +501,29 @@
                                                                                     "FY19.Placeholder"})
                             </section>
                         </div>
-
-
-                        <div class="footer-btn">
-                            <div class="footer-btn__wrapper">
-                                <div class="footer-btn-content">
-                                    <p class="footer-btn-content__txt">
-                                        総合カタログ、サービス別カタログ（PDF）をダウンロード
-                                        することができます。
-                                    </p>
-                                    <p class="footer-btn-content__link"><a href="/business/service/it-guardians/catalog/index.html">カタログダウンロード</a></p>
-                                </div>
-
-                                <div class="footer-btn-content">
-                                    <p class="footer-btn-content__txt">
-                                        商品およびサービスについてご不明な点等ございましたら、
-                                        お気軽にお問い合わせください。
-                                    </p>
-                                    <p class="footer-btn-content__link"><a href="https://bsoffers.konicaminolta.jp/fm-it-guardians-contact.html" target="_blank">お問い合わせ</a></p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <nav class="footer-navigation">
-                            <ul>
-                                <li><a href="/business/service/it-guardians/index.html">TOP</a></li>
-                                <li><a href="/business/service/it-guardians/index.html#itg-solution">課題解決</a></li>
-                                <li><a href="/business/service/it-guardians/helpdesk/index.html">ヘルプデスク</a></li>
-                                <li><a href="/business/service/it-guardians/service/index.html">サービス一覧</a></li>
-                                <li><span>ニュース</span></li>
-                                <li><a href="/business/user_case/solution_service_products/it_guardians/index.html" target="_blank">導入事例</a></li>
-                                <li><a href="/business/support/index.html" target="_blank">サポート情報</a></li>
-                                <li><a href="https://bsoffers.konicaminolta.jp/fm-it-guardians-contact.html" target="_blank">お問い合わせ</a></li>
-                                <li><a href="/business/support/it-guardians/products/it_support/index.html" target="_blank">よくあるご質問</a></li>
-                                <!--<li><span></span></li>-->
-                            </ul>
-                        </nav>
-
-                        <div class="to-top"><p><a href="#top"><span></span></a></p></div>
                     </div>
                 </div>
             </div>
 
-            <footer>
-                <article>
-                    <ul class="leftNav">
-                        <li><a href="https://www.konicaminolta.jp/siteinfo/terms.html">サイトのご利用について</a></li>
-                        <li><a href="https://www.konicaminolta.jp/business/siteinfo/privacypolicy.html">個人情報保護方針</a></li>
-                        <li><a href="https://www.konicaminolta.jp/siteinfo/sitemap.html">サイトマップ</a></li>
-                    </ul>
-                    <ul class="leftNav pcTop"><li><a href="https://www.konicaminolta.jp/">コニカミノルタトップページへ</a></li></ul>
-                    <ul class="rightNav">
-                        <li><a href="https://www.konicaminolta.jp/about/index.html">コニカミノルタグループについて</a></li>
-                        <li><a href="https://www.konicaminolta.jp/about/csr/index.html">CSR（社会・環境活動）</a></li>
-                    </ul>
-                </article>
-
-                <p class="copyright"><small>&copy;2011-2021 KONICA MINOLTA JAPAN, INC.</small></p>
-
-                <script type="text/javascript" charset="UTF-8" src="https://www.konicaminolta.jp/js/ext/sug.js#sv=//s.marsfinder.jp/konicaminolta__jp_business__jp_business&amp;input=search">
-
-                </script>
-
-                <p id="page-top"><a href="#anchorPagetop"><img src="https://www.konicaminolta.jp/business/common/img/navi/pagetop.png" width="70" height="50" alt="このページのトップへ"></a></p>
-            </footer>
+            @*<cms:CMSWebPartZone ZoneID="FooterZone" runat="server" />*@
+            @Html.Kentico().EditableArea("FooterZone",
+                            defaultSectionIdentifier: null,
+                            allowedWidgets: new[] { "FY19.Image",
+                                                    "FY19.H2Header",
+                                                    "FY19.H3Header",
+                                                    "FY19.H4Header",
+                                                    "FY19.BodyText",
+                                                    "FY19.StaticText",
+                                                    "FY19.AnnotationList",
+                                                    "FY19.LinkList",
+                                                    "FY19.BreadCrumbs",
+                                                    "FY19.List",
+                                                    "FY19.AnchorList",
+                                                    "FY19.LinkButton",
+                                                    "FY19.HeadHTML",
+                                                    "FY19.FreeHTML",
+                                                    "FY19.Table",
+                                                    "FY19.Placeholder"})
 
             @*<cms:CMSWebPartZone ZoneID="FooterScriptZone" runat="server" />*@
             @Html.Kentico().EditableArea("FooterScriptZone",
