--- a/FY19/Content/kmj/assets/it-guardians/css/it-guardians.css
+++ b/FY19/Content/kmj/assets/it-guardians/css/it-guardians.css
@@ -806,6 +806,7 @@ div.footerBacktop {
     border: 0;
     outline: none;
     font-size: 0;
+    color: #036
 }
 .inherentNavigation ul {
     flex-wrap: wrap;
