Master Page Template: fix zone arrangements

--- a/FY19/Views/Shared/PageTemplates/KMJ_ITG_MasterPageView.cshtml
+++ b/FY19/Views/Shared/PageTemplates/KMJ_ITG_MasterPageView.cshtml
@@ -507,28 +507,64 @@
                 @*<cms:CMSWebPartZone ZoneID="FooterZone" runat="server" />*@
                 @Html.Kentico().EditableArea("FooterZone",
                                 defaultSectionIdentifier: null,
-                                allowedWidgets: new[] { "FY19.Image",
-                                                        "FY19.H2Header",
-                                                        "FY19.H3Header",
-                                                        "FY19.H4Header",
-                                                        "FY19.BodyText",
-                                                        "FY19.StaticText",
-                                                        "FY19.AnnotationList",
-                                                        "FY19.LinkList",
-                                                        "FY19.BreadCrumbs",
-                                                        "FY19.List",
-                                                        "FY19.AnchorList",
-                                                        "FY19.LinkButton",
-                                                        "FY19.HeadHTML",
-                                                        "FY19.FreeHTML",
-                                                        "FY19.Table",
-                                                        "FY19.Placeholder"})
+                                allowedWidgets: new[] { "FY19.StaticText" })
             </div>
 
-            @*<cms:CMSWebPartZone ZoneID="FooterScriptZone" runat="server" />*@
-            @Html.Kentico().EditableArea("FooterScriptZone",
-                                        defaultSectionIdentifier: null,
-                                        allowedWidgets: new[] { "FY19.StaticText" })
+            <!-- BEGIN VersaTag -->
+            <script>
+                var versaTag = {};
+                versaTag.id = "2203";
+                versaTag.sync = 0;
+                versaTag.dispType = "js";
+                versaTag.ptcl = "HTTPS";
+                versaTag.bsUrl = "bs.serving-sys.com/BurstingPipe";
+                versaTag.activityParams = {
+                    "Session": ""
+                };
+                versaTag.retargetParams = {};
+                versaTag.dynamicRetargetParams = {};
+                versaTag.conditionalParams = {};
+            </script>
+            <script id="ebOneTagUrlId" src="https://secure-ds.serving-sys.com/SemiCachedScripts/ebOneTag.js">
+            </script>
+            <noscript>
+                <iframe src="https://bs.serving-sys.com/BurstingPipe?cn=ot&amp;onetagid=2203&amp;ns=1&amp;activityValues=$$Session=[Session]$$&amp;retargetingValues=$$$$&amp;dynamicRetargetingValues=$$$$&amp;acp=$$$$&amp;" style="display:none;width:0px;height:0px">
+                </iframe>
+            </noscript>
+            <!-- END VersaTag -->
+            <!-- Start of Konica Minolta_Cvtag, Konica_Information equipment_RTtag and Pandora_tag for Web Ad Trucking -->
+            <script language='JavaScript1.1' src='//pixel.mathtag.com/event/js?mt_id=679956&mt_adid=135663&v1=&v2=&v3=&s1=&s2=&s3='></script>
+            <script language='JavaScript1.1' src='//pixel.mathtag.com/event/js?mt_id=681494&mt_adid=135663&v1=&v2=&v3=&s1=&s2=&s3='></script>
+
+            <!--  <script type="text/javascript">
+       function PAGODA_prepClient(fn) {
+        fn.setClientCode('konicaminolta');
+        if(typeof(PAGODA_conversion) == "function"){PAGODA_conversion(fn);}
+       }
+       var host = (("https:" == document.location.protocol) ? "https://ssl" : "http://s") + '.pagoda56.com';
+       document.write(unescape("%3Cscript src='" + host + "/pagoda/pagoda.js' type='text/javascript'%3E%3C/script%3E"));
+     </script> -->
+            <!-- End of Konica Minolta_Cvtag, Konica_Information equipment_RTtag and Pandora_tag for Web Ad Trucking -->
+            <!-- Start of Konica Inc._LinkedInInsightTag -->
+            <script type="text/javascript">
+                _bizo_data_partner_id = "7603";
+            </script>
+            <script type="text/javascript">
+                (function () {
+                    var s = document.getElementsByTagName("script")[0];
+                    var b = document.createElement("script");
+                    b.type = "text/javascript";
+                    b.async = true;
+                    b.src = (window.location.protocol === "https:" ? "https://sjs" : "http://js") + ".bizographics.com/insight.min.js";
+                    s.parentNode.insertBefore(b, s);
+                })();
+            </script>
+            <noscript>
+                <img height="1" width="1" alt="" style="display:none;" src="//www.bizographics.com/collect/?pid=7603&fmt=gif" />
+            </noscript>
+            <!-- end of Konica Inc._LinkedInInsightTag -->
+            <script src="https://www.konicaminolta.jp/business/solution/workstyle_sp/js/vendor/slick.min.js"></script>
+            <script src="https://www.konicaminolta.jp/business/solution/workstyle_sp/js/top.js"></script>
         </div>
 
     </form>
